tests/baselines/reference/parserComputedPropertyName5.errors.txt
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName5.ts(1,11): error TS1309: 'public' modifier cannot be used on an object literal element.


==== tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName5.ts (1 errors) ====
    var v = { public get [e]() { } };
              ~~~~~~
!!! error TS1309: 'public' modifier cannot be used on an object literal element.